# rss

devel/: _setup_util.py  local_setup.sh  setup.sh
devel/include/rss_linux_pkg/: turtlebot_move_square.h  turtlebot_move_squareRequest.h  turtlebot_move_squareResponse.h
devel/lib/pkgconfig/: rss2_msgsrv_pkg.pc  rss_linux_pkg.pc
devel/lib/python3/dist-packages/rss_linux_pkg/srv/: __init__.py  _turtlebot_move_square.py
devel/lib/rss_linux_pkg/: move_square_client.py  move_square_server.py
devel/share/common-lisp/ros/rss_linux_pkg/srv/: _package.lisp  _package_turtlebot_move_square.lisp  rss_linux_pkg-srv.asd  turtlebot_move_square.lisp
devel/share/roseus/ros/rss_linux_pkg/: manifest.l
devel/share/rss2_msgsrv_pkg/cmake/: rss2_msgsrv_pkgConfig.cmake
devel/share/rss_linux_pkg/cmake/: rss_linux_pkg-msg-extras.cmake  rss_linux_pkg-msg-paths.cmake  rss_linux_pkgConfig.cmake
src/rss2_msgsrv_pkg/: CMakeLists.txt  package.xml
src/rss2_msgsrv_pkg/msg/: date_cmd_vel.msg
src/rss2_msgsrv_pkg/src/: msg_pub.py  msg_sub.py  pw_srv_server.py  srv_client.py  srv_server.py
src/rss_linux_pkg/: CMakeLists.txt  package.xml
src/rss_linux_pkg/launch/: pa3.launch  pa4.launch  pa5.launch  pa6.launch
src/rss_linux_pkg/scripts/: chrisparr_pa4.py  chrisparr_publisher.py  chrisparr_publisher_line.py  chrisparr_subscriber.py  cp_srv_client.py  move_square_client.py  move_square_server.py  msg_pub.py  msg_sub.py  pa-1.sh  pa-2.sh  pw_srv_client.py  srv_client.py  stopbot.py
src/rss_linux_pkg/src/: pa-1.py  pa-2.py
src/rss_linux_pkg/srv/: cp_srv_server.py  srv_server.py
(+3 files in other folders)
